--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/lou-to-do-list
+    "url": "https://github.com/heroku/lou-to-do-list"
   }
   
 }
