--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Lou Kaileh",
   "license": "UNLICENSED",
   "private": true,
-  "engines":{
+  "engines": {
     "node": ">=4.0.0"
   },
   "main": "app.js",
@@ -13,9 +13,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "ejs": "2.4.1",
     "body-parser": "^1.4.3",
-    "express": "^4.4.5",
+    "ejs": "2.4.1",
+    "express": "4.15.2",
     "morgan": "^1.1.1",
     "q": "^1.4.1",
     "request": "^2.36.0"
@@ -24,5 +24,4 @@
     "type": "git",
     "url": "https://github.com/heroku/lou-to-do-list"
   }
-  
 }
