modified package.json to run node server.js

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.4.3",
