--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "body-parser": "^1.4.3",
     "ejs": "2.4.1",
-    "express": "4.13.3",
+    "express": "3.x",
     "morgan": "^1.1.1",
     "q": "^1.4.1",
     "request": "^2.36.0"
