--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "bower install"	
   },
   "dependencies": {
     "body-parser": "^1.4.3",
