lowercase naming in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lou's To Do List",
+  "name": "lou-to-do-list",
   "version": "1.0",
   "description": "Build a full stack to do list application",
   "author": "Lou Kaileh",
