--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "bower install"	
+    "start": "node server.js"	
   },
   "dependencies": {
     "body-parser": "^1.4.3",
